Revision history for Async::IPC

          - Should test for the definedness of file handles
          - Possible fix for undefined subroutine error on CI
          - Use sockets not pipes
          - Stream wraps before start not after
          - New Usul type names
          - Updated prereqs
          - Added EV as a dependency
          - Fixed tests on test server
          - Added install of libev to Travis config
          - Configured for Github
          - Added global destruction flag to DEMOLISH subs
          - Renamed Channel pair attr to handle_pair
          - Refactored logging functions
          - MCP runs test loop
          - Native file watcher now looks for new files
          - Optional use of Linux::Inotify2 in ::File
          - Added Functions::log_key_width class method
          - Sigattaches now fork safe
          - Added the type attr to Base. Make type and name unique
          - Add use of Future
          - The log_* functions have an alternate signature
          - Made log_leader private.  Added log_*
          - Added FileStream
          - Routine call channel now async
          - Added missing Loop::watching_* methods
          - Function tests pass
          - Routine now uses Channel and Process
          - Added Handle, Stream, and Channel
          - Added File watcher
          - Added loop once and idle watcher
          - Passing tests
          - Must be sysread not read on Functions::read_exactly
          - Added tests
          - Added POD
          - Setting programe name uses relative path
          - Refactored Function log messages
          - Dropped file and loop from builder handles in Base
          - Imported code from App::MCP

0.1.1     2014-10-16 12:59:44
          - Added project files to master branch
